# grilles_digitizer

./: .gitignore  README.md  app.js  build_data.py  crop_tunes.py  index.html  melody_cropper.py  melody_straightener.py  pyproject.toml  requirements.txt  style.css  title_index.csv  title_match.csv  transcribe.py
.github/workflows/: deploy-pages.yml
Instructions/: displayer_app_spec.md  jazz_chord_digitization_spec.md  melody_digitizer_spec.md
apps/displayer/: README.md  app.js  brushes.js  build_chords_only.py  build_data.py  chords.js  embed_brush_loops.py  index.html  playlists.js  render_brush_samples.py  style.css
apps/key_verifier/: key_verify_app.py
apps/similarity_explorer/: app.js  (+3 more)
data/: title_index.csv  tunes_data.js
docs/: USER_MANUAL.md
grilles_digitizer/: cli.py  config.py  examples.py  images.py  manifest.py  output.py  prompt.py  runner.py  validation.py  vlm.py
grilles_displayer/: app.js  build_data.py  index.html  style.css
grilles_verifier/: verify_app.py
melody_crops/: 357_01_I_NEVER_KNEW_I_COULD_LOVE_ANYBODY
pipelines/: build_title_index.py  deskew_crops.py
tools/: check_chord_syntax.py
tunes/: manifest.csv
tunes_verified/: 153_02_HEART_AND_SOUL.json  21_04_ASK_ME_NOW.json  22_01_AS_LONG_AS_I_LIVE.json  23_03_AT_LONG_LAST_LOVE.json  475_04_YOU_CALL_IT_MADNESS.json  79_03_CON_ALMA.json  9_04_AIN_T_MISBEHAVIN.json
tunes_wip/: 119_03_EVERYTHING_HAPPENS_TO_ME.json  163_03_HOW_LONG_HAS_THIS_BEEN_GOING_ON.json  168_01_I_CAN_T_BELIEVE_THAT_YOU_RE_IN_LOVE_WITH_ME.json  483_04_YOU_SHOWED_ME_THE_WAY.json  77_01_CLOSE_YOUR_EYES.json
(+1180 files in other folders)
