[project]
name = "grilles-digitizer"
version = "0.1.0"
description = "Transcribe cropped handwritten jazz chord grids into structured JSON via a vision-language model."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.69",
    "opencv-python>=4.10",
    "numpy>=2.0",
]

[project.scripts]
transcribe = "pipelines.chords.digitizer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "pipelines",
    "pipelines.chords",
    "pipelines.chords.digitizer",
    "pipelines.chords.key_annotation",
    "pipelines.chords.similarity",
    "pipelines.melody",
]
